syntax = "proto3";

option java_package = "io.github.cryptoofun.genproto";
option java_multiple_files = true;

message GreetingMsg {
    string body = 1;
}
