syntax = "proto3";

option java_package = "io.github.cryptoofun.genproto";
option java_multiple_files = true;

import "common.proto";

service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string first_name = 1;
    string last_name = 2;
}

message HelloResponse {
    GreetingMsg message = 1;
}
